# blog

./: .gitignore  .gitmodules  README.md  TODO.txt  blog.cabal  cabal.project  cabal.project.freeze  ci.project  ci.project.freeze  refreeze-dependencies.sh
.github/workflows/: Cache-Cleanup.yml  Hakyll-Deploy.yml  deploy.yml
app/: Main.hs  Parser.hs  Site.hs  SiteVersion.hs  SkylightingCss.hs
app/Hakyll/: SkylightingCss.hs
content/: index.md
content/css/: default.css  material-symbols.css
content/css/local/: default.css  roboto.css
content/posts/: 404.md  index.md
content/templates/: default.html  material-symbols.css
docs/: CNAME  index.html
docs/css/: default.css  local.css  material-symbols-outlined.css  material-symbols-rounded.css  material-symbols-sharp.css  material-symbols.css  materialize.css  materialize.min.css  roboto.css  skylighting.css
localhooks/: pre-commit
scripts/: download-fonts.sh
