cabal-version:      3.4
name:               blog
version:            0.1.0.0
build-type:         Simple
extra-doc-files:
extra-source-files:

executable blog
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.19.0.0,
                      hakyll ^>= 4.16.0.0

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021

    ghc-options: -Wall -threaded -with-rtsopts=-N
